creating service and controller

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,13 @@ dependencies {
     implementation "org.redisson:redisson-spring-boot-starter:3.27.0"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    compileOnly 'org.projectlombok:lombok:1.18.34'
+    annotationProcessor 'org.projectlombok:lombok:1.18.34'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.34'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
+
 }
 
 tasks.named('test') {
