Dockerfile and docker-compose.yaml

--- a/src/main/resources/redisson.yaml
+++ b/src/main/resources/redisson.yaml
@@ -1,5 +1,5 @@
 singleServerConfig:
-  address: "redis://127.0.0.1:6379"
+  address: "redis://redis:6379"
   connectionMinimumIdleSize: 8
   connectionPoolSize: 32
 threads: 8
